{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 535,
  "lineage": "8fec26b9-7d81-5a16-46fb-1bc1e15b8fe6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1cd67c26f5fca19",
            "arn": "arn:aws:ec2:us-west-2:848351520239:instance/i-0c64d86543ca02c35",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0c64d86543ca02c35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "golang",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0103902e55a344620",
            "private_dns": "ip-192-168-1-113.us-west-2.compute.internal",
            "private_ip": "192.168.1.113",
            "public_dns": "ec2-54-244-96-216.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.96.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2a39f45ae5ece22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ed884368dadf4b5",
            "tags": {
              "Name": "ec2-main"
            },
            "tags_all": {
              "Name": "ec2-main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c220d321af0046f4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.role",
            "aws_security_group.ec2-sg",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080715d89cbdd661e",
            "arn": "arn:aws:ec2:us-west-2:848351520239:instance/i-0240bfefb91906ca3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0240bfefb91906ca3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "golang",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b65213980cc55f3c",
            "private_dns": "ip-192-168-1-44.us-west-2.compute.internal",
            "private_ip": "192.168.1.44",
            "public_dns": "ec2-35-167-69-105.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.69.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e7b2c9731dadf42",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ed884368dadf4b5",
            "tags": {
              "Name": "windows-server"
            },
            "tags_all": {
              "Name": "windows-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c220d321af0046f4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.role",
            "aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:loadbalancer/app/ALB/13e86db0e2ec31dc",
            "arn_suffix": "app/ALB/13e86db0e2ec31dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-635543428.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:848351520239:loadbalancer/app/ALB/13e86db0e2ec31dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-0c220d321af0046f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ed884368dadf4b5"
              },
              {
                "subnet_id": "subnet-0e6459f731172466f"
              }
            ],
            "subnets": [
              "subnet-01ed884368dadf4b5",
              "subnet-0e6459f731172466f"
            ],
            "vpc_id": "vpc-023784abf5eaf95aa",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:listener/app/ALB/13e86db0e2ec31dc/a16c2049e050b621",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:848351520239:listener/app/ALB/13e86db0e2ec31dc/a16c2049e050b621",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:loadbalancer/app/ALB/13e86db0e2ec31dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:targetgroup/TargetGroup/40bdd3821dcd87ab",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:listener-rule/app/ALB/13e86db0e2ec31dc/a16c2049e050b621/abd9a6db30c8b784",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:848351520239:listener-rule/app/ALB/13e86db0e2ec31dc/a16c2049e050b621/abd9a6db30c8b784",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:listener/app/ALB/13e86db0e2ec31dc/a16c2049e050b621",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.tg",
            "aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:848351520239:targetgroup/TargetGroup/40bdd3821dcd87ab",
            "arn_suffix": "targetgroup/TargetGroup/40bdd3821dcd87ab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:848351520239:targetgroup/TargetGroup/40bdd3821dcd87ab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:security-group/sg-0c220d321af0046f4",
            "description": "allow inbound access to the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c220d321af0046f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security-group",
            "name_prefix": "",
            "owner_id": "848351520239",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:security-group/sg-0ac6c8285667bd764",
            "description": "allow inbound access to the database",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac6c8285667bd764",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "848351520239",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0383589bd6694edd9",
            "association_id": "eipassoc-093e0f11a30d4c267",
            "domain": "vpc",
            "id": "eipalloc-0383589bd6694edd9",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a81049149eb87e2b",
            "private_dns": "ip-192-168-1-236.us-west-2.compute.internal",
            "private_ip": "192.168.1.236",
            "public_dns": "ec2-54-218-143-98.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.143.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "db-sample-EIP"
            },
            "tags_all": {
              "Name": "db-sample-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:internet-gateway/igw-0cd80af7a6877343b",
            "id": "igw-0cd80af7a6877343b",
            "owner_id": "848351520239",
            "tags": {
              "Name": "db-sample-IGW"
            },
            "tags_all": {
              "Name": "db-sample-IGW"
            },
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0383589bd6694edd9",
            "connectivity_type": "public",
            "id": "nat-0d643286f65815cd7",
            "network_interface_id": "eni-0a81049149eb87e2b",
            "private_ip": "192.168.1.236",
            "public_ip": "54.218.143.98",
            "subnet_id": "subnet-01ed884368dadf4b5",
            "tags": {
              "Name": "db-sample-NAT"
            },
            "tags_all": {
              "Name": "db-sample-NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd80af7a6877343b",
            "id": "r-rtb-066bd47e36c53edef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066bd47e36c53edef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:route-table/rtb-01fcfdd77d68c4f1c",
            "id": "rtb-01fcfdd77d68c4f1c",
            "owner_id": "848351520239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d643286f65815cd7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-sample-rt-private"
            },
            "tags_all": {
              "Name": "db-sample-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9d0320603492ef7",
            "route_table_id": "rtb-01fcfdd77d68c4f1c",
            "subnet_id": "subnet-0b485635c0b9855d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5c4a29f1fcdb4e4",
            "route_table_id": "rtb-01fcfdd77d68c4f1c",
            "subnet_id": "subnet-02a8a93f8022a5ead"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03833611576034846",
            "route_table_id": "rtb-066bd47e36c53edef",
            "subnet_id": "subnet-01ed884368dadf4b5"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008915d85236c46e9",
            "route_table_id": "rtb-066bd47e36c53edef",
            "subnet_id": "subnet-0e6459f731172466f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:subnet/subnet-0b485635c0b9855d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b485635c0b9855d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848351520239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-sample-net-private1"
            },
            "tags_all": {
              "Name": "db-sample-net-private1"
            },
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:subnet/subnet-02a8a93f8022a5ead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8a93f8022a5ead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848351520239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-sample-net-private2"
            },
            "tags_all": {
              "Name": "db-sample-net-private2"
            },
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:subnet/subnet-01ed884368dadf4b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed884368dadf4b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848351520239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-sample-net-public"
            },
            "tags_all": {
              "Name": "db-sample-net-public"
            },
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:subnet/subnet-0e6459f731172466f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6459f731172466f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848351520239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-sample-net-public"
            },
            "tags_all": {
              "Name": "db-sample-net-public"
            },
            "vpc_id": "vpc-023784abf5eaf95aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:848351520239:vpc/vpc-023784abf5eaf95aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0beb85fe5b82f5108",
            "default_route_table_id": "rtb-066bd47e36c53edef",
            "default_security_group_id": "sg-0916100f913a5d3c0",
            "dhcp_options_id": "dopt-0d38b39627da28213",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-023784abf5eaf95aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066bd47e36c53edef",
            "owner_id": "848351520239",
            "tags": {
              "Name": "db-sample"
            },
            "tags_all": {
              "Name": "db-sample"
            }
          }
        }
      ]
    }
  ]
}